--- a/03.本文を表示しよう/index.html
+++ b/03.本文を表示しよう/index.html
@@ -1,5 +1,5 @@
-HTMLは、ウェブページを作るための言語です。
-
-タグを使ってテキストや画像を表示できます。
-
-ブラウザはタグを解釈して、ページを適切に表示します。
+<p>HTMLは、ウェブページを作るための言語です。<br>
+<br>
+タグを使ってテキストや画像を表示できます。<br>
+<br>
+ブラウザはタグを解釈して、ページを適切に表示します。</p>
