画像の添付

--- a/04.画像を表示させよう/index.html
+++ b/04.画像を表示させよう/index.html
@@ -1,1 +1,4 @@
-<!-- ここに画像を3つ追加してください -->
+<img src="image/dolfin.png" alc="いるか" 
+# ここに画像を3つ追加してください -->
+<img src="image/panda.png" alc="パンダ">
+<img src="image/tiger.png" alc="虎"
